<resources>
    <string name="app_name">WallProject</string>
    <string name="web_client_id">195382908581-0gv5921ibb7tk29c8du8dlg4boqlim3e.apps.googleusercontent.com</string>
    <string name="gameTitle">THE WALL</string>
    <string name="zero">0</string>
    <string name="profile">Profile</string>
    <string name="shells_remaining">Shells Remaining:</string>
    <string name="stones_per_second">Stones Per Second:</string>
    <string name="stones">Stones:</string>
    <string name="wall_health">Wall Health:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="wall_description">The mighty wall has been standing before the humanity for ages, not anyone knowing of its hidden secrets. Now is the time, humanity is finnally ready to uncover what is hidden.</string>
    <string name="wall_stats_header">Wall Stats:</string>
    <string name="click_to_enter_the_game">Click to enter the game</string>
    <string name="your_village">Your Village</string>
    <string name="textview">TextView</string>
    <string name="attack">Attack</string>
    <string name="wall_shells_remaining">Wall shells remaining</string>
    <string name="buy">Buy</string>
    <string name="you_can_search_through_stones_and_with_a_little_luck_find_something_useful_or_you_can_buy_them_like_a_coward">You can search through stones and with a little luck find something useful. Or you can buy them, like a coward..</string>
    <string name="search">Search!</string>
    <string name="research">Research</string>
    <string name="count">Count</string>
    <string name="sps">SPS</string>
    <string name="time_to_mine">Time to mine</string>
    <string name="cost">Cost</string>
    <string name="tools">Tools</string>
    <string name="enter_data">Enter Data</string>
    <string name="level">Level:</string>
    <string name="research_cost">Research cost:</string>
    <string name="hero_name">Hero Name</string>
    <string name="hero_level">Hero Level</string>
</resources>