<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DefaultScreen">

    <TextView
        android:id="@+id/spsText"
        style="@style/textSmall"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintTop_toTopOf="@+id/stonesPerSecondSimpleText"
        tools:layout_editor_absoluteX="172dp" />

    <TextView
        android:id="@+id/stonesPerSecondSimpleText"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/stones_per_second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@+id/stonesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stonesText" />

    <TextView
        android:id="@+id/wallHealthText"
        style="@style/textSmall"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wallHealthSimpleText"
        app:layout_constraintTop_toTopOf="@+id/wallHealthSimpleText" />

    <TextView
        android:id="@+id/villageNameText"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wallHealthSimpleText"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wall_health"
        app:layout_constraintEnd_toStartOf="@+id/wallHealthText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stonesSimpleText" />


    <TextView
        android:id="@+id/stonesSimpleText"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stones"
        app:layout_constraintEnd_toStartOf="@+id/stonesText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/villageNameText" />

    <TextView
        android:id="@+id/stonesText"
        style="@style/textSmall"
        android:layout_width="196dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/stonesSimpleText"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stonesSimpleText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallHealthSimpleText"
        app:srcCompat="@drawable/wall" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>