<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.WallScreen">

    <TextView
        android:id="@+id/wallStatsSimpleText"
        style="@style/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wall Stats:"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wall_health"
        app:layout_constraintBottom_toTopOf="@+id/shellsLeftSimpleText"
        app:layout_constraintEnd_toStartOf="@+id/wallHealthText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallStatsSimpleText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/shellsLeftSimpleText"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shells_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shellsText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/shellsText"
        style="@style/textSmall"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shellsLeftSimpleText"
        app:layout_constraintTop_toBottomOf="@+id/wallHealthText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/wallHealthText"
        style="@style/textSmall"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/shellsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/wallStatsSimpleText"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>