<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/toolImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/tool_crystal_pickaxe" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/textMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/toolImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/toolImageView"
        app:layout_constraintTop_toTopOf="@+id/toolImageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/levelSimpleTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toolImageView" />

    <TextView
        android:id="@+id/silverTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/bronzeTextView"
        app:layout_constraintTop_toBottomOf="@+id/bronzeTextView" />

    <TextView
        android:id="@+id/bronzeTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bronzeImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintStart_toEndOf="@+id/levelSimpleTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/researchCostSimpleTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/research_cost"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/toolImageView" />

    <TextView
        android:id="@+id/researchCostTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/researchCostSimpleTextView"
        app:layout_constraintTop_toTopOf="@+id/researchCostSimpleTextView" />

    <TextView
        android:id="@+id/goldTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/silverTextView"
        app:layout_constraintTop_toBottomOf="@+id/silverTextView" />

    <ImageView
        android:id="@+id/bronzeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/silverImageView"
        app:layout_constraintEnd_toEndOf="@+id/silverImageView"
        app:srcCompat="@drawable/ore_clutter_bronze" />

    <ImageView
        android:id="@+id/silverImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/goldImageView"
        app:layout_constraintEnd_toEndOf="@+id/goldImageView"
        app:srcCompat="@drawable/ore_clutter_silver" />

    <ImageView
        android:id="@+id/goldImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goldTextView"
        app:srcCompat="@drawable/ore_clutter_gold" />
</androidx.constraintlayout.widget.ConstraintLayout>