<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ResearchScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyTextNumber" />

    <TextView
        android:id="@+id/researchSimpleText"
        style="@style/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/research"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchThroughTextNumber"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyExplanationSimpleTextView" />

    <TextView
        android:id="@+id/currencyExplanationSimpleTextView"
        style="@style/textSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/you_can_search_through_stones_and_with_a_little_luck_find_something_useful_or_you_can_buy_them_like_a_coward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentGoldTextView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/stonesResearchTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/researchSimpleText"
        app:srcCompat="@drawable/stones" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/currentSilverTextView"
        app:layout_constraintEnd_toStartOf="@+id/currentBronzeTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stonesResearchTextView"
        app:layout_constraintTop_toBottomOf="@+id/researchSimpleText"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ore_clutter_bronze" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/currentGoldTextView"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ore_clutter_silver" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/currentGoldTextView"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ore_clutter_gold" />

    <TextView
        android:id="@+id/stonesResearchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/currentBronzeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/currentSilverTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/researchSimpleText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/currentSilverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/currentGoldTextView"
        app:layout_constraintEnd_toEndOf="@+id/currentBronzeTextView"
        app:layout_constraintTop_toBottomOf="@+id/currentBronzeTextView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/currentGoldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/currencyExplanationSimpleTextView"
        app:layout_constraintEnd_toEndOf="@+id/currentSilverTextView"
        app:layout_constraintTop_toBottomOf="@+id/currentSilverTextView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/searchButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/searchThroughTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchThroughTextNumber"
        app:layout_constraintTop_toTopOf="@+id/searchThroughTextNumber" />

    <Spinner
        android:id="@+id/currencySpinner"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buyTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/finalPriceTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buyTextNumber"
        app:layout_constraintTop_toTopOf="@+id/buyTextNumber" />

    <EditText
        android:id="@+id/buyTextNumber"
        style="@style/textSmall"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchThroughTextNumber" />

    <Button
        android:id="@+id/buyButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="@+id/finalPriceTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/finalPriceTextView"
        app:layout_constraintTop_toTopOf="@+id/finalPriceTextView" />

    <TextView
        android:id="@+id/finalPriceTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/currencySpinner"
        app:layout_constraintEnd_toStartOf="@+id/buyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/currencySpinner"
        app:layout_constraintTop_toTopOf="@+id/currencySpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>