<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ProfileScreen">

    <Button
        android:id="@+id/signInButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dip"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/signOutButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dip"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/villageNameTextViewProfile"
        style="@style/textMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/signOutButton"
        app:layout_constraintEnd_toStartOf="@+id/signInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signOutButton"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stonesTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bronzeTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:layout_constraintVertical_bias="0.20999998" />

    <TextView
        android:id="@+id/silverTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/bronzeTextViewProfile"
        app:layout_constraintStart_toStartOf="@+id/bronzeTextViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/bronzeTextViewProfile" />

    <TextView
        android:id="@+id/goldTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/silverTextViewProfile"
        app:layout_constraintStart_toStartOf="@+id/silverTextViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/silverTextViewProfile" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bronzeTextViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bronzeTextViewProfile"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/stones" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bronzeTextViewProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/bronzeTextViewProfile"
        app:srcCompat="@drawable/ore_clutter_bronze" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/silverTextViewProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/silverTextViewProfile"
        app:srcCompat="@drawable/ore_clutter_silver" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/goldTextViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goldTextViewProfile"
        app:srcCompat="@drawable/ore_clutter_gold" />

    <TextView
        android:id="@+id/playerNameTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/wallSimpleTextViewProfile"
        app:layout_constraintEnd_toEndOf="@+id/stonesTextViewProfile"
        app:layout_constraintStart_toStartOf="@+id/stonesTextViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/stonesTextViewProfile"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/playerLevelTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/shellsTextViewProfile"
        app:layout_constraintStart_toEndOf="@+id/playerNameTextViewProfile"
        app:layout_constraintStart_toStartOf="@+id/shellsTextViewProfile"
        app:layout_constraintTop_toTopOf="@+id/playerNameTextViewProfile" />

    <TextView
        android:id="@+id/wallSimpleTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wall_shells_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/playerNameTextViewProfile"
        app:layout_constraintStart_toStartOf="@+id/playerNameTextViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/playerNameTextViewProfile"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/shellsTextViewProfile"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wallSimpleTextViewProfile"
        app:layout_constraintTop_toTopOf="@+id/wallSimpleTextViewProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>